--- a/index.html
+++ b/index.html
@@ -2,19 +2,210 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>GRUPO RIDE!</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <title>CodePen - server 3.0</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="container">
-  <div class="text"></div>
+<ul class="server-status-info">
+  <p> Server Status</p>
+  <li>Running</li>
+  <li class="warning">Warning</li>
+  <li class="offline">Offline</li>
+</ul>
+
+<div class="server-rack">
+  <P class="label">RIDE! Status</P>
+
+  <a href="#/">
+    <div class="server">
+      <ul class="server-status ">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p class="server-info">Server Principal</p>
+      <div class="hdd"></div>
+    </div>
+  </a>
+
+  <a href="#/">
+    <div class="server">
+    </div>
+  </a>
+
+  <a href="#/">
+    <div class="server">
+      <ul class="server-status server-offline">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p class="server-info">Server Mapa</p>
+      <div class="hdd"></div>
+    </div>
+  </a>
+
+  <a href="#/">
+    <div class="server">
+      <ul class="server-status">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p class="server-info">Server Respaldo</p>
+      <div class="hdd"></div>
+    </div>
+  </a>
+
+  <a href="#/">
+    <div class="server">
+      <ul class="server-status server-offline">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p class="server-info">Server Pagina web</p>
+      <div class="hdd"></div>
+    </div>
+  </a>
+
+
+
+  <div class="server-half-container">
+
+    <ul class="half-server">
+
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li> 
+          </ul> 
+          <p class="server-info">half 2nd</p>
+        </li>
+      </a>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first</p>
+        </li>
+      </a>
+      <li></li>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first new</p>
+        </li>
+      </a>
+      <li></li>
+    </ul>
+    <ul class="half-bottom-server">
+
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first</p>
+        </li>
+      </a>
+      <li></li>
+      <a href="http://www.google.com" target="_blank">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">google</p>
+        </li>
+      </a>
+      <li></li>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">bottom 2nd </p>
+        </li>
+      </a>
+      <li></li>
+    </ul>
+
+    <ul class="full-server">
+
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status server-warning">
+            <li></li>
+            <li></li>
+          </ul>
+
+          <p class="server-info">first</p>
+        </li>
+      </a>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info ">
+
+            warning</p>
+        </li>
+      </a>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first</p>
+        </li>
+      </a>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first</p>
+        </li>
+      </a>
+      <li></li>
+      <a href="#/">
+        <li class="active">
+          <ul class="server-status server-offline">
+            <li></li>
+            <li></li>
+          </ul>
+          <p class="server-info">first</p>
+        </li>
+      </a>
+    </ul>
+
+  </div>
+
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
