--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 </head>
 <body>
 	<!-- partial:index.partial.html -->
-<div class="alert alert-danger" role="alert">
-  <b>Advertencia</b> No salir de casa 
-</div>
+	<div class="containter">
+		<div class="alert alert-danger" role="alert">
+			<b>Advertencia</b> No salir de casa 
+		</div>
+		<div class="alert alert-danger" role="alert">
+			<b>Advertencia</b> No salir de casa 
+		</div>
+	</div>
 	<div class="container">
-	
-	
 		<div class="text"></div>
 	</div>
 	<!-- partial -->
 	<script  src="./script.js"></script>
 </body>
 </html>
+
