--- a/Backup/ConteoOficial/index.html
+++ b/Backup/ConteoOficial/index.html
@@ -18,7 +18,7 @@
     <!-- Card body -->
     <div class="card-body">
       <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Total Cases</h5>
+        <h5 class="card-title text-uppercase text-muted">Casos</h5>
         <span class="h2 font-weight-bold total_cases color-red count">0</span>
       </div>
       <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -30,7 +30,7 @@
     <!-- Card body -->
     <div class="card-body">
       <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Deaths</h5>
+        <h5 class="card-title text-uppercase text-muted">Muertos</h5>
         <span class="h2 font-weight-bold deaths color-blue count">0</span>
       </div>
       <div class="icon icon-shape bg-gradient-blue text-white rounded-circle shadow">
@@ -42,7 +42,7 @@
     <!-- Card body -->
     <div class="card-body">
       <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Recovered</h5>
+        <h5 class="card-title text-uppercase text-muted">Recuperados</h5>
         <span class="h2 font-weight-bold recovered color-green count">0</span>
       </div>
       <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
@@ -54,7 +54,7 @@
     <!-- Card body -->
     <div class="card-body">
       <div class="col">
-        <h5 class="card-title text-uppercase text-muted">New Cases Today</h5>
+        <h5 class="card-title text-uppercase text-muted">Nuevos Casos Hoy</h5>
         <span class="h2 font-weight-bold new_cases color-orange count">0</span>
       </div>
       <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
