--- a/index.html
+++ b/index.html
@@ -1,71 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Novel Coronavirus (COVID-19) Live Tracker Mexico</title>
-  <link rel="stylesheet" href="./style.css">
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>GRUPO RIDE!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="./style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 
-</head>
-<body>
-<!-- partial:index.partial.html -->
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<h1 class="title">COVID-19 - RealTime México <br> QUEDATE EN CASA </h1>
-<div class="container">
-  <!-- Card stats -->
-  <div class="card card-stats">
-    <!-- Card body -->
-    <div class="card-body">
-      <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Casos</h5>
-        <span class="h2 font-weight-bold total_cases color-red count">0</span>
-      </div>
-      <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
-        <i class="fas fa-users"></i>
-      </div>
-    </div>
-  </div>
-  <div class="card card-stats">
-    <!-- Card body -->
-    <div class="card-body">
-      <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Muertos</h5>
-        <span class="h2 font-weight-bold deaths color-blue count">0</span>
-      </div>
-      <div class="icon icon-shape bg-gradient-blue text-white rounded-circle shadow">
-        <i class="fas fa-procedures"></i>
-      </div>
-    </div>
-  </div>
-  <div class="card card-stats">
-    <!-- Card body -->
-    <div class="card-body">
-      <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Recuperados</h5>
-        <span class="h2 font-weight-bold recovered color-green count">0</span>
-      </div>
-      <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
-        <i class="fas fa-child"></i>
-      </div>
-    </div>
-  </div>
-  <div class="card card-stats">
-    <!-- Card body -->
-    <div class="card-body">
-      <div class="col">
-        <h5 class="card-title text-uppercase text-muted">Nuevos Casos Hoy</h5>
-        <span class="h2 font-weight-bold new_cases color-orange count">0</span>
-      </div>
-      <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-        <i class="fas fa-bell"></i>
-      </div>
-    </div>
-  </div>
-</div>
+      crossorigin="anonymous">
+  </head>
+  <body style="   background-color:black;"> 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script><script  src="./script.js"></script>
+crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
 
-</body>
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+
+crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+
+crossorigin="anonymous"></script>
+    <!-- partial:index.partial.html -->
+    <div class="container">
+      <div class="text"></div>
+    </div>
+    <!-- partial -->
+    <script src="./script.js"></script>
+  </body>
 </html>
