--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - React Morph Clock</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+  <title>CodePen - Javascript Clock with Milliseconds</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class='text'>Inspired by 
-	<a 
-		 href="https://vimeo.com/131953261" 			   			target="_black">
-		 3Angle Watch Face
-	</a>
-</div>
+<body onLoad="initClock()">
 
-<div class="clock"></div>
+  <div id="timedate">
+    <a id="mon">January</a>
+    <a id="d">1</a>,
+    <a id="y">0</a><br />
+    <a id="h">12</a> :
+    <a id="m">00</a>:
+    <a id="s">00</a>:
+    <a id="mi">000</a>
+  </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
-<script src='https://cdn.polyfill.io/v2/polyfill.min.js'></script><script  src="./script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
