--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <h1 class="title">COVID-19 - RealTime México <br> QUEDATE EN CASA </h1>
-<img src="https://grabify.link/LBK785">
+<img src="https://i.imgur.com/FVldYF4.png">
 <div class="container">
   <!-- Card stats -->
   <div class="card card-stats">
